# LuaTest

./: LICENSE  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/site/lvkun/luatest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
luandroid/: CMakeLists.txt  build.gradle
luandroid/src/androidTest/java/site/lvkun/luandroid/: LuaStateTest.java
luandroid/src/main/: AndroidManifest.xml
luandroid/src/main/cpp/: Constants.h  Log.h  LuaState.cpp  Utils.cpp  Utils.h
luandroid/src/main/cpp/lua/src/: lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lbitlib.c  lcode.c  lcorolib.c  lctype.h  ldblib.c  ldebug.c  ldo.c  ldump.c  lfunc.c  lgc.c  linit.c  liolib.c  llex.c  llimits.h  lmathlib.c  lmem.c  lmem.h  loadlib.c  lobject.c  lobject.h  loslib.c  lparser.c  lstate.c  lstate.h  lstring.c  lstrlib.c  ltable.c  ltablib.c  ltm.c  lua.c  lua.hpp  luac.c  lualib.h  lundump.c  lutf8lib.c  lvm.c  (+2 more)
luandroid/src/main/cpp/value/: LuaValue.cpp  LuaValue.h
luandroid/src/main/java/site/lvkun/luandroid/: LuaState.java  LuaValue.java
luandroid/src/main/java/site/lvkun/luandroid/value/: LuaInteger.java  LuaNumber.java
